new addtions to index

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>To the Power of Math!</title>
   </head>
   <body>
-    To the Power of Math2!
+    To the Power of Math2git config --global user.email !
   </body>
 </html>
